rules/default-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  port:
      name: http
      number: 80
      protocol: HTTP
 
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
