rules/http-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httptrigger3-http
  namespace: default
spec:
  hosts:
  - httptrigger3-http
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percent: 100
    route:
    - destination:
        host: httptrigger3-http
